<?xml version="1.0"?>
<package format="2">
  <name>helical_curve_gait</name>
  <version>0.0.0</version>
  <description>The helical_curve_gait package</description>

  <maintainer email="hajime0316@s.okayama-u.ac.jp">Hajime</maintainer>

  <license>BSD</license>

  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>snake_gait</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
